# Kunai

./: Cargo.toml  run.sh
scripts/: mem_editor.py  tasks.py
src/: event_handler.rs  kunai.rs  logging.rs  main.rs  memory_model.rs  proc_utils.rs  tui.rs  ui.rs  utils.rs
src/components/: edit_memory.rs  footer.rs  header.rs  mod.rs  task_selector.rs
