[package]
name = "kunai"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
directories = "5.0.1"
lazy_static = "1.5.0"
memchr = "2.7.4"
ratatui = "0.26.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
